# RVemu

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  vcpkg.json
docs/: rv64_instructions.md
src/: Bus.cpp  Bus.h  CMakeLists.txt  Clint.cpp  Clint.h  Cpu.cpp  Cpu.h  CpuUtils.cpp  Defines.h  Device.h  ElfLoader.cpp  ElfLoader.h  Memory.cpp  Memory.h  Plic.cpp  Plic.h  Trap.cpp  Trap.h  Uart.cpp  Uart.h  VirtIO.cpp  VirtIO.h  benchmark_main.cpp  main.cpp  validation_main.cpp
src/GUI/: ComputerThread.cpp  ComputerThread.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  RVemu.qrc  Terminal.cpp  Terminal.h  mainGUI.cpp
test/: add-addi.elf  csr.elf  echoback.elf  fib.elf  helloworld.elf  helloworld_elf.s  simple_code_proper.elf
test_elfs/: 32bit.elf  bigendian.elf  create_test_elfs.py  higher_address.elf  higher_address.s  invalid_magic.elf  linker.ld  simple_code.elf  simple_code.s  simple_exit.s  valid_64bit.elf  with_data_bss.elf  with_data_bss.s  with_data_bss_fixed.elf  with_data_bss_proper.elf
tests/: BusTest.cpp  CMakeLists.txt  ClintTest.cpp  CpuInstructionTest.cpp  ElfLoaderTest.cpp  InstructionNameTest.cpp  MemoryTest.cpp  PlicTest.cpp  UartTest.cpp  VirtIOTest.cpp
